--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ a.link_color {
 	position: static;
 	padding-top: 100px;
 	margin: 4% 8% 10% 10%;
+	color: white;
 	
 }
 
@@ -101,7 +102,7 @@ a.link_color {
 
 .fight {
 	border: 2px solid white;
-	
+	color: white;
 	margin-top: 10px;
 	margin-bottom:10px;
 	margin-left:10px;
